[gd_scene load_steps=17 format=3 uid="uid://da8p4riu2s1es"]

[ext_resource type="Script" uid="uid://br1b3glia0fte" path="res://Main_menu/main_menu.gd" id="1_3u35k"]
[ext_resource type="Shader" uid="uid://clneyq2r1vlu6" path="res://Main_menu/glitch.gdshader" id="2_dt0ve"]
[ext_resource type="Theme" uid="uid://cvs6600wgb1go" path="res://Main_menu/testo.tres" id="2_sblur"]
[ext_resource type="Texture2D" uid="uid://dvvk2htvcko5y" path="res://Main_menu/Logo_2.png" id="2_t5aul"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ac4ys"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_sblur"]
shader = ExtResource("2_dt0ve")
shader_parameter/red_displacement = 0.0
shader_parameter/green_displacement = 0.0
shader_parameter/blue_displacement = 0.0
shader_parameter/ghost = 0.0
shader_parameter/intensity = 0.0
shader_parameter/scan_effect = 0.0
shader_parameter/distortion_effect = 1.0
shader_parameter/negative_effect = 1.0

[sub_resource type="Animation" id="Animation_ac4ys"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_sblur"]
resource_name = "background"
length = 20.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 10, 20),
"transitions": PackedFloat32Array(1, 0.210224, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.0768358, 0.0768358, 0.0768358, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xx208"]
_data = {
&"RESET": SubResource("Animation_ac4ys"),
&"background": SubResource("Animation_sblur")
}

[sub_resource type="Animation" id="Animation_dt0ve"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Logo:material:shader_parameter/distortion_effect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Logo:material:shader_parameter/negative_effect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Logo:material:shader_parameter/ghost")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("VBoxContainer:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_t5aul"]
resource_name = "logo"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Logo:material:shader_parameter/distortion_effect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Logo:material:shader_parameter/negative_effect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Logo:material:shader_parameter/ghost")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(3.01, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.125]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("VBoxContainer:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(4.16667, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sblur"]
_data = {
&"RESET": SubResource("Animation_dt0ve"),
&"logo": SubResource("Animation_t5aul")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ac4ys"]

[sub_resource type="Animation" id="Animation_ypuyk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_xx208"]
resource_name = "fade_out"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_piv42"]
_data = {
&"RESET": SubResource("Animation_ypuyk"),
&"fade_out": SubResource("Animation_xx208")
}

[node name="Main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3u35k")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
modulate = Color(1, 1, 1, 0)
texture_filter = 1
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -25.0
offset_top = -107.0
offset_right = 119.0
offset_bottom = 73.0
grow_vertical = 0
focus_neighbor_top = NodePath("Start")
focus_neighbor_bottom = NodePath("Esci")

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_sblur")
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0.947406, 3.77826e-06, 1.73271e-06, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_ac4ys")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ac4ys")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ac4ys")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ac4ys")
theme_override_styles/normal = SubResource("StyleBoxEmpty_ac4ys")
action_mode = 0
text = "Start"

[node name="Continua" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_sblur")
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0.94902, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_ac4ys")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ac4ys")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ac4ys")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ac4ys")
theme_override_styles/normal = SubResource("StyleBoxEmpty_ac4ys")
action_mode = 0
text = "Continua"

[node name="Impostazioni" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_sblur")
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0.94902, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_ac4ys")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ac4ys")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ac4ys")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ac4ys")
theme_override_styles/normal = SubResource("StyleBoxEmpty_ac4ys")
action_mode = 0
text = "Impostazioni"

[node name="Esci" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_sblur")
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0.94902, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_ac4ys")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ac4ys")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ac4ys")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ac4ys")
theme_override_styles/normal = SubResource("StyleBoxEmpty_ac4ys")
action_mode = 0
text = "Esci"

[node name="Logo" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_sblur")
position = Vector2(127, 49)
scale = Vector2(0.141846, 0.116211)
texture = ExtResource("2_t5aul")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
metadata/_edit_lock_ = true

[node name="Background" type="AnimationPlayer" parent="ColorRect"]
libraries = {
&"": SubResource("AnimationLibrary_xx208")
}
autoplay = "background"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_sblur")
}
autoplay = "logo"

[node name="Dad&Daughter" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_ac4ys")
position = Vector2(767, 497)
scale = Vector2(0.2, 0.2)

[node name="Fade_out" type="ColorRect" parent="."]
z_index = 1
layout_mode = 0
offset_left = -1.0
offset_top = -2.0
offset_right = 644.0
offset_bottom = 507.0
mouse_filter = 2
color = Color(0, 0, 0, 0)

[node name="Fade_out_animation" type="AnimationPlayer" parent="Fade_out"]
libraries = {
&"": SubResource("AnimationLibrary_piv42")
}

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Continua" to="." method="_on_continua_pressed"]
[connection signal="pressed" from="VBoxContainer/Impostazioni" to="." method="_on_impostazioni_pressed"]
[connection signal="pressed" from="VBoxContainer/Esci" to="." method="_on_esci_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="animation_finished" from="Fade_out/Fade_out_animation" to="." method="_on_fade_out_animation_animation_finished"]
